--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,36 @@
-/vendor/
-node_modules/
+.gitignore
+node_modules
+dist/frontend
+/public/hot
+/public/storage
+/public/uploads/0000
+/storage/*.key
+storage/app/*
+!storage/app/public/
+storage/app/public/*
+!storage/app/public/demo/
+/vendor
+/.idea
+/resources/ckeditor/node_modules/
+.env
+.env.backup
+.env.production
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+auth.json
 npm-debug.log
 yarn-error.log
-
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
-
-# Laravel 5 & Lumen specific
-public/storage
-public/hot
-
-# Laravel 5 & Lumen specific with changed public path
-public_html/storage
-public_html/hot
-
-storage/*.key
-.env
-Homestead.yaml
-Homestead.json
-/.vagrant
-.phpunit.result.cache
+/.fleet
+/.vscode
+storage/bc.php
+storage/installed
+public/themes/*/dist
+/en
+/old
+/storage
+.babelrc
+.editorconfig
+.ftpquota
+.gitattributes
+.htaccess
